backend/diag.txt
python :   File 
"<string>", line 1
Au caractère Ligne:1 : 1
+ python -c "import 
traceback; import sys; 
os=__import__('os'); 
sys.pat ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~
    + CategoryInfo        
      : NotSpecified: (   
   File "<string>", lin   
 e 1:String) [], Remot    
eException
    + FullyQualifiedError 
   Id : NativeCommandErr  
  or
 
    import traceback; 
import sys; 
os=__import__('os'); sys.p
ath.append(os.getcwd()); 
try: from app.main import 
app; print('SUCCESS'); 
except Exception: 
traceback.print_exc()
                          
                          
                          
       ^^^
SyntaxError: invalid 
syntax
